Fix tab switcher screenshots for interstitials.

In particular, interstitials "mask" the underlying webcontents
and we need to handle them specially.  We do this by capturing
the correct content::RenderViewHost from the interstitial
instead of the webcontents it sits on top of.

BUG=675283

Review-Url: https://codereview.chromium.org/2581413002
Cr-Commit-Position: refs/heads/master@{#440772}

Former-commit-id: 5eb9ee95588a470a55b89d6e65ab67b0fdaff802